# mlops_zoomcamp_24

./: .gitignore  README.md  env.py  requirements.txt
01-intro/: hw_1_yellow_taxi.py
02-experiment-tracking/: README.md  duration-prediction.ipynb  mlflow_client.py  mlflow_loading_uri.py
03-model-deployment/: Dockerfile.mage  HW3_README.md  README.md  docker-compose.yml
03-orchestration/: Dockerfile.mlflow  HW3_README.md  README.md
04-model-deployment/: Dockerfile  Pipfile  README.md  background_flask.sh
05-model-monitoring/: 01-baseline_model_nyc_taxi_data.ipynb  02-create-evidently-reports.ipynb  03-create-evidently-dashboard.ipynb  Pipfile  README.md  docker-compose.yml  dummy_metrics.py  dummy_metrics_sqlach.py  evidently_metrics.py  requirements.txt  utils.py
06-best-practices/: README.md
notebooks/: 02-03-Remote_MLFlow_with_S3_Bucket_and_PostGRESQL.ipynb  03-Implementing_loclahost_MLFlow_in_terminal.ipynb  (+2 more)
project/backend/: Makefile  README.md  mini-requirements.txt  pyproject.toml  requirements.txt  start_server.sh
project/backend/config/: grafana_datasources.yaml
project/backend/dashboards/: data_drift.json
project/backend/mlflow-ec2/: Pipfile
project/backend/pkg/: __init__.py  clean.py  data.py  models.py  train.py  utils.py
project/backend/pkg/app/: __init__.py  app_utils.py  load_model.py  server.py  static_server.py  utils.py
project/backend/pkg/model/: __init__.py  data.py  models.py  retraining.py  sim_monitor.py  train.py  utils.py
project/backend/pkg/tests/: data_test.py  model_test.py
project/backend/src/: get_data.py
(+84 files in other folders)
