[tool.poetry]
name = "collisionpy"
version = "0.1.0"
description = "Vehicle collision predictions in NY"
authors = ["Josesx506 <josesomojola@gmail.com>"]
readme = "README.md"
# package-mode = false
packages = [{ include = "pkg" }]

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.14.2"
numpy = "1.26.4"
pandas = "^2.2.2"
boto3 = "^1.34.140"
matplotlib = "^3.9.1"
ipykernel = "^6.29.5"
geopandas = "^1.0.1"
geopy = "^2.4.1"
osmnx = "^1.9.3"
folium = "^0.17.0"
requests = "^2.32.3"
tqdm = "^4.66.4"
xgboost = "^2.1.0"
hyperopt = "^0.2.7"
prefect = "^2.19.8"
evidently = "^0.4.31"
psycopg = "^3.2.1"
setuptools = "^70.3.0"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
seaborn = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
